# tag-cli

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/tag-cli/: Cargo.toml  build.rs
crates/tag-cli/src/: cli.rs  completions.rs  diff.rs  lib.rs  main.rs  report.rs
crates/tag-cli/src/commands/: apply.rs  clear.rs  cover.rs  export_metadata.rs  get.rs  info.rs  init_manifest.rs  list_keys.rs  mod.rs  set.rs  update.rs
crates/tag-cli/templates/: classical.yaml  education.yaml  podcast.yaml  radio.yaml  release.yaml  vinyl.yaml
crates/tag-cli/tests/: cli_test.rs  error_propagation.rs  export_metadata.rs  fixtures.rs  update_test.rs
crates/tag-cli/tests/fixtures/: song.flac
crates/tag-core/: Cargo.toml  build.rs
crates/tag-core/src/: config.rs  error.rs  image_proc.rs  keys.rs  lib.rs  output.rs  test_helpers.rs
crates/tag-core/src/workflow/: builder.rs  context.rs  mod.rs  step.rs
crates/tag-core/src/workflow/steps/: detect_format.rs  format_output.rs  mod.rs  process_cover.rs  read_metadata.rs  resolve_output.rs  save_file.rs  update_cover.rs  update_tags.rs
crates/taglib-rs/: Cargo.toml  build.rs
crates/taglib-rs/src/: ffi.rs  keys.rs  lib.rs  test_utils.rs  wrapper.rs
crates/taglib-rs/tests/: wrapper.rs
docs/superpowers/plans/: 2026-07-04-help-kubectl-style.md  2026-07-07-remove-non-proxy-env-vars.md
scripts/: coverage.sh  package.sh
