[workspace]
members = ["crates/taglib-rs", "crates/tag-core", "crates/tag-cli"]
resolver = "3"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }

[workspace.package]
version = "0.1.1"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
