[package]
name = "tag-cli"
version.workspace = true
edition.workspace = true
license = "MIT"

[[bin]]
name = "tag-cli"
path = "src/main.rs"

[dependencies]
tag-core = { path = "../tag-core" }
taglib-rs = { path = "../taglib-rs" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock"] }
pathdiff = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp", "tiff"] }
taglib-rs = { path = "../taglib-rs", features = ["test-utils"] }
