[package]
name = "tag-cli"
version.workspace = true
edition.workspace = true
license = "MIT"

[features]
test-overrides = []

[[bin]]
name = "tag-cli"
path = "src/main.rs"

[dependencies]
tag-core = { path = "../tag-core" }
taglib-rs = { path = "../taglib-rs" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock"] }
pathdiff = "0.2"
mime_guess = "2"
ureq = { version = "2", features = ["rustls"] }
self-replace = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tiny_http = "0.12"
tag-cli = { path = ".", features = ["test-overrides"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp", "tiff"] }
taglib-rs = { path = "../taglib-rs", features = ["test-utils"] }
