[package]
name = "tag-cli"
version.workspace = true
edition.workspace = true
license = "MIT"

[[bin]]
name = "tag-cli"
path = "src/main.rs"

[dependencies]
tag-core = { path = "../tag-core" }
taglib-rs = { path = "../taglib-rs" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pathdiff = "0.2"
mime_guess = "2"
ureq = { version = "2", features = ["rustls"] }
url = "2"
self-replace = "1"
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tag-cli = { path = "." }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp", "tiff"] }
taglib-rs = { path = "../taglib-rs", features = ["test-utils"] }
